--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Florian Forsthuber <florian.forsthuber@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
